# HaskellCircuits

./: .markdown-preview.html  HaskellCircuits.cabal  LambdaCircuits.cabal  README.md  blank  testLexCore
app/: Main.hs
result/: __fork2__.h  const3.h  const8.h  constant_3.h  constant_5.h  g.h  main  mainFunc.h  special_add.h  special_mul.h  testbench.h  top.h
src/: #TransformationMonad.hs#  #Types.hs#  Aux.hs  Components.hs  Core.hs  Fir.hs  Function.hs  Function2.hs  Layout.hs  Layout2.hs  LayoutCore.hs  Lexer.x  Lexer2.x  LexerCore.x  Lib.hs  Parser.y  Parser2.y  ParserCore.y  R.hs  Test.hs  ToSystemC.hs  TransformationMonad.hs  TypeCheck.hs  TypeSynth.hs  Types.hs
test/: #reverse_#  condfuncstream  condstream  drop  fac  fac_  fg  filter  filter_  fir  fir3  fir_  highorder  map  map_  reverse  streamfunc  sum  sum_  sumstream  take  test  testLex  testLexCore  userData  userData~  userNot  userlist  window  y  zipWith_  zipwith
test/fac_result/: const_dec_11_.h  fac.h  fac__left.h  main  mainFunc.h  otherwise.h  testbench.h  top.h
test/fir3_result/: #join3__left.h#  .#join3__left.h  const_bin_10_.h  const_dec_12_.h  const_dec_22_.h  const_dec_32_.h  f.h  join3.h  join3__left.h  join3__left.h~  main  mainFunc.h  sli_1_32_10_.h  testbench.h
test/fir_result/: __fork2__.h  __fork3__.h  add1_.h  cat3_.h  const_bin_11_.h  const_dec_03_.h  const_dec_04_.h  const_dec_13_.h  const_stream_dec01_.h  const_stream_dec02_.h  const_stream_dec04_.h  const_stream_dec05_.h  equ2_.h  equ3_.h  main  mainFunc.h  map.h  mul1_.h  not_1_.h  reverse.h  reverse_.h  sli_0_0_11_.h  sli_0_0_13_.h  sli_0_0_17_.h  sli_0_0_18_.h  sli_0_0_19_.h  sli_0_0_7_.h  sli_0_0_9_.h  sli_1_31_2_.h  sli_1_32_12_.h  sli_1_32_20_.h  sli_1_32_21_.h  sli_1_32_24_.h  sub1_.h  sum.h  sum_.h  take.h  testbench.h  top.h  window.h  (+2 more)
test/hey/: hey.cpp
test/map_result/: __fork2__.h  const_dec_13_.h  const_dec_21_.h  const_stream_dec3_dec2_dec1_dec01_.h  f.h  g.h  main  mainFunc.h  map.h  map__left.h  mul1_.h  sli_0_0_6_.h  sli_1_32_8_.h  testbench.h  top.h
test/reverse_result/: const_dec_02_.h  main  mainFunc.h  reverse.h  reverse_.h  sli_0_0_1_.h  testbench.h  top.h
test/streamfunc_result/: equ1_.h  g.h  main  mainFunc.h  mrest_1_1_.h  mrest_1_2_.h  testbench.h  top.h
test/sum_result/: add1_.h  const_dec_01_.h  const_dec_03_.h  const_dec_12_.h  main  main.cpp  mainFunc.h  sum.h  sum__left.h  testbench.h  top.h
test/take_result/: const_dec_11_.h  const_dec_31_.h  equ2_.h  main  mainFunc.h  sli_1_32_9_.h  take.h  take__left.h  testbench.h  top.h
test/test_result/: Cons_Int.h  Nil_Int.h  True.h  __fork2__.h  add.h  and_.h  and_1_.h  cat1_.h  cat2_.h  cat3_.h  const3.h  const5.h  const8.h  const_bin_01_.h  const_bin_1.h  const_dec_0.h  const_dec_01_.h  const_dec_02_.h  const_dec_1.h  const_dec_3.h  const_dec_51_.h  const_dec_6.h  const_hex_1.h  equ.h  equ1_.h  fac.h  g.h  h.h  h__0g.h  k__1g.h  main  mainFunc.h  map__left.h  mul.h  not_.h  reverse.h  sli_0_0_10_.h  sli_0_0_12_.h  sli_0_0_14_.h  sli_0_0_16_.h  (+18 more)
test_result/: main  testbench.h  top.h
test_result_result/: mainFunc.h  testbench.h  top.h
(+34 files in other folders)
