name:                HaskellCircuits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellCircuits#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, LayoutCore, Function, Components, ToSystemC, Types, TransformationMonad, Aux
  extensions:          FlexibleContexts
  build-depends:       base >= 4.7 && < 5, array >= 0.5.1.1, mtl >= 2.2.1, split, utf8-string >= 1.0.1.1, containers >= 0.5.7.1, directory>= 1.3.0.0, transformers >= 0.5.2.0
  build-tools:         alex, happy
  other-modules:       LexerCore, ParserCore
  default-language:    Haskell2010

executable HaskellCircuits-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellCircuits
  default-language:    Haskell2010

test-suite HaskellCircuits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellCircuits
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/luizss/HaskellCircuits
